--- a/style.css
+++ b/style.css
@@ -11,6 +11,53 @@
     }
 }
 
+@keyframes changeTextColor {
+    0% {
+        color: red;
+    }
+    100% {
+        transform: scale(1.2);
+        color: green;
+    }
+}
+
+@keyframes fly {
+    0% {
+        left: 15%;
+        top: 60%;
+    }
+    25% {
+        left: 15%;
+        top: 15%;
+        transform: rotate(0deg);
+    }
+    26% {
+        transform: rotate(90deg);
+    }
+    50% {
+        left: 80%;
+        top: 15%;
+        transform: rotate(90deg);
+    }
+    51% {
+        transform: rotate(180deg);
+    }
+    75% {
+        left: 80%;
+        top: 60%;
+        transform: rotate(180deg);
+    }
+    76% {
+        transform: rotate(270deg);
+    }
+    100% {
+        left: 15%;
+        top: 60%;
+        transform: rotate(270deg);
+    }
+}
+
+
 /* Affichage */
 
 *
@@ -157,4 +204,107 @@
 {
     display: none;
 }
+
+section.top-page
+{
+    background-image: url(img/top-page-bg.jpg); 
+    background-size: cover;
+    height: 80vh;
+    display: flex;
+    justify-content: center;
+}
+
+section.top-page header 
+{
+    position: absolute;
+    display: flex;
+    justify-content: center;
+    width: 100%;
+    margin-top: 10px;
+}
+
+section.top-page header nav a 
+{
+    margin: 0 60px;
+    text-decoration: none;
+    color: white;  
+}
+
+section.top-page div.top-phrase
+{
+    display: flex;
+    align-items: center;
+    text-align: center;
+    justify-content: center;
+    width: 35vw;
+    line-height: 40px;
+    font-size: 22px;
+    -o-animation: changeTextColor 2s ease-in-out 0s infinite alternate;
+    -webkit-animation: changeTextColor 2s ease-in-out 0s infinite alternate;
+    -moz-animation: changeTextColor 2s ease-in-out 0s infinite alternate;
+}
+
+section.top-page div.avion
+{
+    position: absolute;
+    width: 80px;
+    left: 20%;
+    top: 60%;
+    -o-animation: fly 3s ease-in-out 0s infinite;
+    -webkit-animation: fly 3s ease-in-out 0s infinite;
+    -moz-animation: fly 3s ease-in-out 0s infinite;
+}
+
+section.top-page div.avion img 
+{
+    width: 100%;
+}
+
+/* Cartes photo */
+
+section.photo-card
+{
+    margin-top: 60px;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+}
+
+section.photo-card .c
+{
+    height: 300px;
+    overflow: hidden;
+}
+
+section.photo-card .photo1
+{
+    width: 269px;
+    background-color: #000;
+    display: flex;
+    justify-content: center;
+}
+
+section.photo-card .c img
+{
+    height: 100%;
+}
+
+section.photo-card .jeune 
+{
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: space-between;
+    height: 400px;
+}
+
+section.photo-card .jeune .photo-group
+{
+    display: flex;
+    align-items: center;
+    justify-content: space-around;
+    width: 70vw;
+}
+
+
 
